Added tracking of number of moves. Added restart key.
git-svn-id: file:///home/christian/devel/old_stuff/repos/curses_game@27 35bedb40-ae74-4ce4-95d1-460f42495af1

--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
-todo:
+refactoring:
+- it's ugly that display commands require the world as an argument
 - get_command is a mess
 - load_level is a mess
 - review of shield code and refactoring
