Refactored display so every call doesn't require a world argument. Attempted refactoring of key handling for dead keys.
git-svn-id: file:///home/christian/devel/old_stuff/repos/curses_game@28 35bedb40-ae74-4ce4-95d1-460f42495af1

--- a/todo
+++ b/todo
@@ -1,12 +1,11 @@
 refactoring:
-- it's ugly that display commands require the world as an argument
+- dir_vec is a stupid name
 - get_command is a mess
 - load_level is a mess
 - review of shield code and refactoring
 - refactor block sinking into water collide_terrain() code, reduce duplication
 
 features:
-- number of moves tracking
 - effects
 	- color
 	- show when a dead-key command is pending
