Added BlockPiece, which can make polyominos sink into water like blocks. Fixed bug where hero can win level without actually touching goal. Redid system for having an entity react to a terrain type. This system still needs refactoring.
git-svn-id: file:///home/christian/devel/old_stuff/repos/curses_game@33 35bedb40-ae74-4ce4-95d1-460f42495af1

--- a/todo
+++ b/todo
@@ -1,5 +1,10 @@
 - level design
 
+refactoring:
+- terrain triggers, blocks, polyominos sinking
+- start_move finish_move, terrain_trigger_test terrain_trigger_action
+
+
 features:
 - effects
 	- color
