--- a/todo
+++ b/todo
@@ -2,7 +2,11 @@ todo:
 - level design
 
 housekeeping:
+- unittests
+- rename variable "type" to "cmd_type" in world.py
 - use dict.get where appropriate, instead of doing exception handling
+- use real python logging, not crappy custom log
+- python 3? 2to3? 3to2?
 
 features:
 - effects
