--- a/todo
+++ b/todo
@@ -1,8 +1,11 @@
 todo:
 - level design
 
+to test:
+- info squares in level loading
+- undo features
+
 housekeeping:
-- unittests
 - rename variable "type" to "cmd_type" in world.py
 - use dict.get where appropriate, instead of doing exception handling
 - use real python logging, not crappy custom log
@@ -20,4 +23,5 @@ features:
 	- motion between states
 
 bugs:
+- fix n**2 behavior in polyominos (1 move -> 9 trigger test -> 81 trigger action)
 - bump display when opening shield is usually incomplete
