--- a/todo
+++ b/todo
@@ -4,6 +4,7 @@ todo:
 to test:
 - using the shield
 	2 - try to open up the shield when you're  blocked
+	- closing the shield
 - pushing a block
 - pushing several blocks in a line
 - pushing a block with the shield
@@ -15,7 +16,6 @@ housekeeping:
 1 - split collide_entity into a function on world, get_entity(pos)
 	- unittest first
 	- use the get_entity function to test the sheild open unittest
-- use dict.get where appropriate, instead of doing exception handling
 - use real python logging, not crappy custom log
 - python 3? 2to3? 3to2?
 
@@ -41,3 +41,4 @@ style:
 bugs:
 - fix n**2 behavior in polyominos (1 move -> 9 trigger test -> 81 trigger action)
 - bump display when opening shield is usually incomplete
+- display not showing borders correctly?
