--- a/todo
+++ b/todo
@@ -13,7 +13,6 @@ to test:
 	- requires good tests on undo features first
 
 housekeeping:
-- rename entity_trigger to bump_entity
 - use real python logging, not crappy custom log
 - python 3? 2to3? 3to2?
 
@@ -37,7 +36,9 @@ style:
 - make it an umbrella
 
 bugs:
-1- fail loudly when an unrecognized entity is in the level
+1- whitespace in level loading
+2- fail loudly when an unrecognized entity is in the level
+- spaces interior to level are inaccessible, but show the same as floor
 - fix n**2 behavior in polyominos (1 move -> 9 trigger test -> 81 trigger action)
 - bump display when opening shield is usually incomplete
 - display not showing borders correctly?
