--- a/todo
+++ b/todo
@@ -1,28 +1,26 @@
 levels:
-- combine the orthogonal and diagonal movement levels
 
 to test:
-- pushing several blocks in a line
+1- undo features
+3- test that all the levels in the game can be solved
+    - have a solution code like (mne, mw, ssw, me)
+	- requires good tests on undo features first
 - pushing a block with the shield
 - polyomino blocks
 - spikes
 - pushing blocks into water
 	- heavy blocks into water
 	- pushing polyomino blocks into water
-- undo features
-- test that all the levels in the game can be solved
-    - have a solution code like (mne, mw, ssw, me)
-	- requires good tests on undo features first
 
 housekeeping:
 - use real python logging, not crappy custom log
 - python 3? 2to3? 3to2?
 
 features:
+2- record level demo
+4- continuity
 - gameplay
-	- blocks that slide all the way away from you til they hit something
-		- maybe they carom and transfer momentum when they hit another block?
-		- do they slide together in groups?
+	- should you be able to push multiple heavy blocks with your shield? maybe no?
 - effects
 	- color
 	- show when a dead-key command is pending
@@ -37,9 +35,23 @@ style:
 - make it an umbrella
 
 bugs:
-- crash when pushing polyomino
+- require a level to have a goal
 - spaces interior to level are inaccessible, but show the same as floor
 - fix n**2 behavior in polyominos (1 move -> 9 trigger test -> 81 trigger action)
 	- reduce duplication between polyomino logic and entity logic
 - bump display when opening shield is usually incomplete
 - display not showing borders correctly?
+
+notes:
+
+- gameplay progression
+movement intro
+heavy blocks intro
+* simple puzzles with heavy blocks,
+water
+* sokoban puzzles with water and pushing, still no shield
+enable shield
+* puzzles with shield and heavy blocks
+spikes
+round blocks
+sliding blocks
